Modificación setting y main header y sidebar

--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -1,4 +1,14 @@
 {% load adminlte_helpers %}
+{% block title %}
+<div class="col-sm-10 col-sm-offset-2">
+        <div ALIGN="center">
+          <h1><a href="http://www.xoftix.com/xoftix/"><strong>MONIVET</strong></h1>
+          <h4 style="color: rgb(5, 5, 5)">GESTIÓN MONITOREO DE VARIABLES</h4> 
+        <!--<img src="https://es.gravatar.com/userimage/129557126/1c34eb04615c6a9114dddb8668ee3b9f.png" style="width:70px;height:70px"/>-->
+        </a>
+        </div>
+      </div>
+      {% endblock title %}
 <!-- Left side column. contains the sidebar -->
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
