Modificar models, agregar opción  gráficas.

--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -151,8 +151,23 @@
                         </li>
                     </ul>
                 </li>
-                <!-- {% endif %}
-             {% if perms.usuario.usuario %}
+                {% endif %}
+                <li class="treeview">
+                    <a href="http://www.xoftix.com/xoftix/">
+                        <i class="fa fa-pencil-square-o"></i> <span>Gestión Gráficas</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="http://201.184.185.77:1880/ui/#!/0?socketid=TobV3HDTqaBnDAYjAAAD">
+                                <i class="fa fa-binoculars"></i>Ver mis gráficas
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+             <!-- {% if perms.usuario.usuario %}
              <li class="treeview">
                 <a href="http://www.xoftix.com/xoftix/">
                     <i class="fa fa-pencil-square-o"></i> <span>Editar ó Eliminar Empresa</span>
@@ -167,7 +182,7 @@
                         </a>
                     </li>
                 </ul>
-             </li> -->
+             </li>  -->
                 {% endif %}
                 {% endblock nav_links %}
                 {% endblock nav_links_outer %}
