--- a/templates/index_welcome/index.html
+++ b/templates/index_welcome/index.html
@@ -32,8 +32,9 @@
     animation: text 3s 1;
   }
   .text2{
-    font-size: 30px;
+    font-size: 40px;
     color: #6ab04c;
+    font-family: sans-serif;
   }
   
   @keyframes text {
@@ -62,5 +63,10 @@
   <span class="text1">Bienvenido a</span>
   <span class="text2">Monitev</span>
 </div>
-  </body>
+</body>
+<footer class="main-footer">
+<div class="pull-right hidden-xs">
+    <strong>Copyright © 2019. By Team Lab</strong>
+</div> 
+</footer>
 </html>
