--- a/templates/adminlte/lib/_main_sidebar.html
+++ b/templates/adminlte/lib/_main_sidebar.html
@@ -2,7 +2,7 @@
 {% block title %}
 <div class="col-sm-10 col-sm-offset-2">
         <div ALIGN="center">
-          <h1><a href="http://www.xoftix.com/xoftix/"><strong>MONIVET</strong></h1>
+          <h1><a href="*"><strong>MONIVET</strong></h1>
           <h4 style="color: rgb(5, 5, 5)">GESTIÓN MONITOREO DE VARIABLES</h4> 
         <!--<img src="https://es.gravatar.com/userimage/129557126/1c34eb04615c6a9114dddb8668ee3b9f.png" style="width:70px;height:70px"/>-->
         </a>
@@ -123,7 +123,7 @@
                 </li>
                 {% if perms.usuario.usuario %}
                 <li class="treeview">
-                    <a href="http://www.xoftix.com/xoftix/">
+                    <a href="*">
                         <i class="fa fa-pencil-square-o"></i> <span>Gestión Empresas</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -163,6 +163,13 @@
                         <li>
                             <a href="http://201.184.185.77:1880/ui/#!/0?socketid=TobV3HDTqaBnDAYjAAAD">
                                 <i class="fa fa-binoculars"></i>Ver mis gráficas
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="{% url 'grafica' %}">
+                                <i class="fa fa-binoculars"></i>Prueba gráficas
                             </a>
                         </li>
                     </ul>
