--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends 'stylelogin.html' %}
 {% load i18n %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}{% trans "Log in" %}{% endblock %}
 
@@ -7,6 +8,7 @@
 <div class='row'>
     <div class='col-sm-3 col-sm-offset-4'>
 <form method="post" action="">
+    <img src="/gestionMonitev/media/logo_monitev.jpeg"></img>
     <div class='col-sm-11 col-sm-offset-1'>
         <h2 class='text-align-center'><strong>Iniciar Sesión</strong></h2><br/>
     </div>
